<resources>
    <string name="app_name">Doggie Gallery</string>
    <string name="download">Download</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="copyright">Image Provided By Dog CEO</string>

    <!--  Title Tab Categories  -->
    <string name="tab_title_categories_for_you">For You</string>
    <string name="tab_title_categories_most_popular">Most Popular</string>
    <string name="tab_title_categories_most_liked">Most Liked</string>
    <string name="tab_title_categories_random">Random</string>
    <string name="error_image_link_missing">Link of image Error</string>
    <string name="content_desc_detail_image">Image of content</string>
    <string name="toast_image_not_ready">Image is still loading</string>
    <string name="toast_download_start">Downloading image…</string>
    <string name="toast_download_success">Image saved to gallery</string>
    <string name="toast_download_failed">Failed to save image</string>
    <string name="toast_wallpaper_success">Wallpaper updated</string>
    <string name="toast_wallpaper_failed">Failed to set wallpaper</string>
    <string name="toast_share_failed">Unable to share image</string>
    <string name="toast_copy_success">Link copied to clipboard</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="search_hint_home">Search dog breeds and photos</string>
    <string name="content_desc_back">Go back</string>
    <string name="content_desc_clear_search">Clear search query</string>
    <string name="search_empty">No results match your search yet.</string>
    <string name="load_state_retry">Retry</string>
    <string name="ad_placeholder">Ad placement</string>
    <string name="error_image_load">Failed to load images</string>
    <string name="error_missing_breed">Breed not provided</string>
    <string name="empty_liked_images">No liked images yet.</string>
    <string name="error_liked_images">Failed to load liked images.</string>
    <string name="detail_actions_title">Image options</string>
    <string name="detail_actions_subtitle">Choose what you want to do with this photo.</string>
</resources>
